hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_offsetGet_param_array.php
<?php

$array = new SplDoublyLinkedList( );

$get = $array->offsetGet( array( 'fail' ) );

?>